Closed Bug 1648865 Opened 5 years ago Closed 5 years ago

DualShock 4 Triggers should be a range analog instead of binary

Categories

(Core :: DOM: Device Interfaces, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: daoshengmu, Assigned: daoshengmu)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → dmu
Severity: -- → S3
Priority: -- → P1
Blocks: 1643833

I have confirmed it will happen on Windows and Mac OS.

We were treating trigger as button value {0, 1}. We should convert its value from (-1, +1) to (0, +1) as analog values.

Pushed by dmu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b3a3c131a279 Convert Gamepad trigger axis values to button values. r=baku
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: