Bug 1648865 - Convert Gamepad trigger axis values to button values. r=baku

Differential Revision: https://phabricator.services.mozilla.com/D81428